# ChanoX

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: apisec-scan.yml  build-linux.yml  build-macos.yml  build-windows.yml  codeql.yml  deploy.yml  snyk-infrastructure.yml
WebView 2/ConsoleApp2/: ConsoleApp2.csproj  Program.cs  packages.config
WebView 2/ConsoleApp2/Properties/: AssemblyInfo.cs
WebView-2/ConsoleApp2/: ConsoleApp2.csproj  MainForm.cs  Program.cs  Program.resx  packages.config
src/: error-page.tsx  index.css  layout.tsx  main.tsx
src-tauri/: 2.0.0-rc  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/plugins/: dropbox_plugin.py  mega.json
src-tauri/plugins/dropbox/: dropbox.json
src-tauri/plugins/mediafire/: mediafire.json  mediafire.py
src-tauri/src/: api.rs  archiver.rs  cloudinary.rs  commands.rs  downloadmanager.rs  downloads.rs  games.rs  lib.rs  main.rs  mediafire.rs  mega.rs  plugin.rs  state.rs  types.rs  utils.rs
src/component/: ImageComponent.tsx
src/context/: SettingsProvider.tsx  TauriProvider.tsx
src/lib/: utils.ts
src/routes/: ArticleDetailModal.tsx  CreateArticle.tsx  TranslationFiles.tsx  article.tsx  chat.tsx  downloads.tsx  games.tsx  home.tsx  plugin.tsx  profile.tsx  settings.tsx
src/routes/api/: articleApi.ts  categoryApi.ts  fetchArticleBySlug.ts  fetchArticleDownloads.ts  index.ts  platformApi.ts  tagApi.ts  types.ts  utils.ts
src/routes/components/articles/: ArticleDetailModal.tsx  ArticleForm.tsx  DownloadForm.tsx  DownloadLinksList.tsx  ErrorAlert.tsx  ImageSelector.tsx  LoadingIndicator.tsx  MediaUploadForm.tsx  StepIndicator.tsx  SummaryStep.tsx
src/routes/components/articles/types/: index.ts  types.ts
src/routes/download/: ArticleDetailDownloads.tsx  ArticleDetailModal.tsx  ArticleDownloads.tsx  TranslationFiles.tsx
src/routes/types/: types.ts
src/routes/utils/: unzip.tsx
src/types/: tauri.d.ts
src/utils/: imgproxy.tsx  themes.tsx
