[package]
name = "ChanoX"
version = "0.9.5"
description = "A ChanoX App"
authors = ["Chnaomhub"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = ["tray-icon", "unstable"] }
tauri-plugin-notification = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
sha1 = "0.10"
chrono = "0.4"
hex = "0.4"
tauri-plugin-dialog = "2.4.0"
futures-util = "0.3.31"
# wry = "0.47"
mega = "0.8.0"
url = "2.5.4"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "fs", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
scraper = "0.23.1"
dirs = "5.0"
glob = "0.3"
shlex = "1.3.0"
regex = "1.11.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-shell = "2.3.1"
zip = "2.1.3"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
tauri-plugin-opener = "2.5.0"
image = { version = "0.25.6" }
tauri-utils = "2.4.0"
ico = "0.4.0"
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
